Remove development files from repository
- Remove .distignore (WordPress.org packaging file)
- Remove .wordpress-org-submission-checklist.md (internal checklist)
- Remove CONFLICT-DETECTION-RESEARCH.md (internal research notes)
- Update .gitignore to exclude these files

--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,6 @@ DEV-README.md
 
 # Development/workflow documents
 fatlabschema-v1-development-plan.md
+.wordpress-org-submission-checklist.md
+CONFLICT-DETECTION-RESEARCH.md
+.distignore
