Update donation page URL to schema-wizard specific page

--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,4 +1,4 @@
 # Funding information for FatLab Schema Wizard
 # Support the development of this plugin
 
-custom: https://fatlabwebsupport.com/donate
+custom: https://fatlabwebsupport.com/schema-wizard/donation
